What we are doing section

--- a/index.html
+++ b/index.html
@@ -112,13 +112,28 @@
                 <h2 class="works-title">Чем мы занимаемся</h2>
                 <ul class = "works-list">
                     <li class = "item">
-                        <img src="images/studio/box_1.jpg" alt="Руки на клавиатуре" width="370">
+                        <div class="thumb">
+                            <img src="images/studio/box_1.jpg" alt="Руки на клавиатуре" width="370">
+                            <div class="overlay">
+                                <p class="works-list-text">Десктопные приложения</p>
+                            </div>
+                        </div>
                     </li>
                     <li class = "item">
-                        <img src="images/studio/box_2.jpg" alt="Моделрование для смартфона" width="370">
+                        <div class="thumb">
+                            <img src="images/studio/box_2.jpg" alt="Моделрование для смартфона" width="370">
+                            <div class="overlay">
+                                <p class="works-list-text">Мобильные приложения</p>
+                            </div>
+                        </div>
                     </li>
                     <li class = "item">
-                        <img src="images/studio/box_3.jpg" alt="Цветовая палитра" width="370">
+                        <div class="thumb">
+                            <img src="images/studio/box_3.jpg" alt="Цветовая палитра" width="370">
+                            <div class="overlay">
+                                <p class="works-list-text">Дизайнерские решения</p>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>        
