--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class = "logo" href=""><span>Web</span>Studio</a>
                 <ul  class = "navigation-links">
                     <li class = "item">
-                        <a class = "link" href="">Студия</a>
+                        <a class = "link is-active" href="">Студия</a>
                     </li>
                     <li class = "item">
                         <a class = "link" href="./portfolio.html">Портфолио</a>
