--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                         <a class="link" href="./index.html">Студия</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="./portfolio.html">Портфолио</a>
+                        <a class="link is-active" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="item">
                         <a class="link" href="">Контакты</a>
