--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- Шапка -->
         <section class = "title">
                 <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+                <button type="button" data-modal-open>Заказать услугу</button>
         </section>
         <!-- особенности -->
         <section class = "peculiarities-section section">
@@ -387,5 +387,15 @@
             </div>
         </div>
     </footer>
+    <div class="modal-overlay is-hidden" data-modal>
+        <div class="modal-window">
+            <div class="modal-close-button" data-modal-close>
+                <svg width = "30" height = "30">
+                    <use href = "./images/crost.svg"></use>
+                </svg>
+            </div>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
