--- a/index.html
+++ b/index.html
@@ -390,9 +390,7 @@
     <div class="modal-overlay is-hidden" data-modal>
         <div class="modal-window">
             <div class="modal-close-button" data-modal-close>
-                <svg width = "30" height = "30">
-                    <use href = "./images/crost.svg"></use>
-                </svg>
+               <img src="./images/crost.svg" alt="крест" width="18" height="18">
             </div>
         </div>
     </div>
