--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
     </footer>
     <div class="modal-overlay is-hidden" data-modal>
         <div class="modal-window">
-            <div class="modal-close-button" data-modal-close>
+            <button class="modal-close-button" data-modal-close>
                <img src="./images/crost.svg" alt="крест" width="18" height="18">
-            </div>
+            </button>
         </div>
     </div>
     <script src="./js/modal.js"></script>
